fix images not showing up

--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
   height:200px;
   background-size: cover;
   background-position: center;
-  background-image: url(../images/1.jpg);
+  
 
 }
 .center{
